# myHunterV2

./: CMakeLists.txt
App/: main.cpp
Module/: SfmlRef.hpp
Module/ProjectManager/: Ecs.hpp  ProjectComponent.hpp  ProjectComponentManager.hpp  ProjectManager.hpp
Module/SoundManager/: AudioManager.hpp  IAudioModule.hpp  MusicManager.hpp  SFMLAudioModule.hpp
Module/SpriteManager/: SpriteManager.hpp
User/: UserComponent.hpp  UserComponentManager.hpp  UserManager.cpp  UserManager.hpp  UserProjectManager.hpp
User/Systems/: System.cpp  System.hpp
